cmake_minimum_required(VERSION 2.6)
project(shell)
set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic -std=gnu99")
add_executable(shell shell.c)
add_executable(cat cat.c)
add_executable(hexdump hexdump.c)
add_executable(whoami whoami.c)
add_executable(mkdir mkdir.c)
add_executable(rmdir rmdir.c)
add_executable(ps ps.c)
